# tributary

./: README.md  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-cost-analytics/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-RESEARCH.md
.planning/phases/03-optimization/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-simulation/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-CONTEXT.md  04-RESEARCH.md  04-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
notebooks/: 01_data_exploration.ipynb  02_liquidity_analysis.ipynb
src/tributary/analytics/: __init__.py  benchmarks.py  cost_forecast.py  impact.py  (+3 more)
tests/unit/: test_almgren_chriss.py  test_benchmarks.py  test_comparison.py  test_cost_forecast.py  test_fill_model.py  test_impact.py  test_reader.py  test_scheduler.py  test_shortfall.py  test_simulation_engine.py  test_simulation_events.py  test_simulation_integration.py  test_simulation_metrics.py  test_simulation_results.py  test_slippage.py  test_strategies.py  test_strategy_runner.py
(+15 files in other folders)
